--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "clsx": "^1.1.1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-star-ratings": "^2.3.0",
     "web-vitals": "^0.2.4"
